--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -8,9 +8,9 @@
     background-color: rgba(245, 245, 245, 0.95);
 }
 
-.form:hover {
+.form:focus-within {
     border-color: rgb(29, 185, 84);
-    transition-duration: 0.35s;
+    transition-duration: 0.75s;
 }
 
 .input {
