--- a/src/containers/SearchResultsContainer/SearchResultsContainer.module.css
+++ b/src/containers/SearchResultsContainer/SearchResultsContainer.module.css
@@ -5,5 +5,30 @@
     border-radius: 12px;
     border: 1px solid rgba(209, 213, 219, 0.3);
     padding: 10px 30px;
-};
+    text-align: center;
+}
+
+.h1 {
+    margin: 20px 0 30px 0;
+}
+
+.hide {
+    display: none;
+}
+
+.track {
+    display: flex;
+    align-items: center;
+    border-bottom: solid rgba(102, 102, 102, 0.555);
+    margin-bottom: 30px;
+    padding-bottom: 30px;
+}
+
+.trackInfo {
+    width: 80%;
+}
+
+.addButton {
+    width: 20%;
+}
 
