--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,11 +1,15 @@
 .input {
     border: none;
     border-bottom: 3px solid black;
+    margin-top: 15px;
     background: none;
-    font-size: 18px;
+    font-size: 30px;
     padding: 5px;
     width: 100%;
     text-align: center;
+    transition-duration: 0.75s;
+    margin-bottom: 30px;
+    
 }
 
 .input:focus {
