--- a/src/containers/SearchResultsContainer/SearchResultsContainer.module.css
+++ b/src/containers/SearchResultsContainer/SearchResultsContainer.module.css
@@ -6,10 +6,17 @@
     border: 1px solid rgba(209, 213, 219, 0.3);
     padding: 10px 30px;
     text-align: center;
+    width: 500px;
+    min-width: 300px;
+    height: 80vh;
+    overflow-y: scroll;
+    scrollbar-color: rgba(102, 102, 102, 0.555) transparent;
+    overflow-x: hidden;
 }
 
 .h1 {
     margin: 20px 0 30px 0;
+    font-size: 30px;
 }
 
 .hide {
