--- a/src/App.module.css
+++ b/src/App.module.css
@@ -49,3 +49,14 @@
     width: 90%;
     flex-wrap: wrap;
 }
+
+@media screen and (max-width: 800px) {
+    .header {
+        width: 100%;
+        justify-content: space-evenly;
+    }
+
+    .main {
+        width: 90%;
+    }
+}
