--- a/src/components/SaveButton/SaveButton.module.css
+++ b/src/components/SaveButton/SaveButton.module.css
@@ -12,3 +12,9 @@
     transition-duration: 0.35s;
     color: whitesmoke;
 }
+
+@media screen and (max-width: 800px) {
+    .saveButton {
+        font-size: 14px;
+    }
+}
