--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -24,3 +24,13 @@
 .input:focus {
     outline: none;
 }
+
+@media screen and (max-width: 800px) {
+    .input {
+        font-size: 14px;
+    }
+    
+    .form {
+        min-width: 170px;
+    }
+}
