--- a/src/components/Track/Track.module.css
+++ b/src/components/Track/Track.module.css
@@ -13,3 +13,22 @@
     height: 100px;
     width: 100px;
 }
+
+@media screen and (max-width: 800px) {
+    h2 {
+        font-size: 18px;
+    }
+
+    h3 {
+        font-size: 16px;
+    }
+
+    h4 {
+        font-size: 14px;
+    }
+
+    .album {
+        height: 70px;
+        width: auto;
+    }
+}
